@@ -42,7 +42,7 @@ import logging
 logger = logging.getLogger("MDAnalysis.analysis.distances")
 
 
-def contact_matrix(coord, cutoff=15.0, returntype="numpy", box=None, progress_meter_freq=100, suppress_progmet=False):
+def contact_matrix(coord, cutoff=15.0, returntype="numpy", box=None, progress_meter_freq=100, quiet=False):
     '''Calculates a matrix of contacts between a list of coordinates.
 
     There is a fast, high-memory-usage version for small systems
@@ -54,30 +54,28 @@ def contact_matrix(coord, cutoff=15.0, returntype="numpy", box=None, progress_me
     are currently supported.
 
     Change *progress_meter_freq* to alter frequency of progress meter
-    updates. Or switch *suppress_progmet* to ``True`` to suppress it
-    completely.
+    updates. Or switch *quiet* to ``True`` to suppress it completely.
+
+    .. versionchanged:: 0.11.0
+       Keyword *suppress_progmet* was changed to *quiet*.
     '''
     if returntype == "numpy":
         adj = (distance_array(coord, coord, box=box) < cutoff)
         return adj
-
     elif returntype == "sparse":
         # Initialize square List of Lists matrix of dimensions equal to number of coordinates passed
         sparse_contacts = sparse.lil_matrix((len(coord), len(coord)), dtype='bool')
-        # if PBC
-
         # TODO Jan: this distance matrix will be symmetric, hence some of the iterations could be skipped.
         if box is not None:
-            contact_matrix_pbc(coord, sparse_contacts, box, cutoff, progress_meter_freq, suppress_progmet)
-
-        # if no PBC
+            # if PBC
+            contact_matrix_pbc(coord, sparse_contacts, box, cutoff, progress_meter_freq, quiet)
         else:
-            contact_matrix_no_pbc(coord, sparse_contacts, cutoff, progress_meter_freq, suppress_progmet)
-
+            # if no PBC
+            contact_matrix_no_pbc(coord, sparse_contacts, cutoff, progress_meter_freq, quiet)
         return sparse_contacts
 
 
-def contact_matrix_pbc(coord, sparse_contacts, box, cutoff, progress_meter_freq, suppress_progmet):
+def contact_matrix_pbc(coord, sparse_contacts, box, cutoff, progress_meter_freq, quiet):
     """Contact matrix calculation with periodic boundary conditions.
 
     You don't have to call this function explicitly; just provide a
@@ -94,32 +92,24 @@ def contact_matrix_pbc(coord, sparse_contacts, box, cutoff, progress_meter_freq,
     box_half = numpy.array([x / 2. for x in box])
     logger.info("contac_matrix_pbc(): using box %r", box)
     logger.debug("contac_matrix_pbc(): half box %r", box_half)
+    _quiet = 1 if quiet else 0  # weave does not like Python True/False and does not convert to bool
 
     c_code = """
     #include <math.h>
-
     int rows = Ncoord[0];
-
     float cutoff2 = powf(cutoff, 2);
-
     py::tuple args(2);
-
     bool b = 1;
-
     args[1] = b;
-
     for (int i=0; i < rows; i++) {
-
         // Print progress meter
-        if (i % progress_meter_freq == 0 ) {
+        if (! _quiet && (i % progress_meter_freq == 0)) {
             printf("%.1f percent done \\n", (100.0 * i / rows));
         }
-
         for (int j=0; j < rows; j++) {
             float x = coord(i,0) - coord(j,0);
             float y = coord(i,1) - coord(j,1);
             float z = coord(i,2) - coord(j,2);
-
 
             // Handle the periodicity
             if (fabs(x) > box_half(0) ) {
@@ -137,31 +127,24 @@ def contact_matrix_pbc(coord, sparse_contacts, box, cutoff, progress_meter_freq,
                 else { z -= box(2); }
             }
 
-
             float dist = powf(x, 2) + powf(y, 2) + powf(z, 2);
 
             if (dist != 0.0 && dist < cutoff2) {
-
                 py::tuple idx(2);
-
                 idx[0] = i;
-
                 idx[1] = j;
-
                 args[0] = idx;
-
-                sparse_contacts.mcall("__setitem__",args);
+                sparse_contacts.mcall("__setitem__", args);
             }
         }
     }
     """
-
     weave.inline(c_code,
-                 ['coord', 'sparse_contacts', 'box', 'box_half', 'cutoff', 'progress_meter_freq', 'suppress_progmet'],
+                 ['coord', 'sparse_contacts', 'box', 'box_half', 'cutoff', 'progress_meter_freq', '_quiet'],
                  type_converters=converters.blitz)
 
 
-def contact_matrix_no_pbc(coord, sparse_contacts, cutoff, progress_meter_freq, suppress_progmet):
+def contact_matrix_no_pbc(coord, sparse_contacts, cutoff, progress_meter_freq, quiet):
     """Contact matrix calculation without periodic boundary conditions.
 
     You don't have to call this function explicitly; just set *box* =
@@ -172,51 +155,37 @@ def contact_matrix_no_pbc(coord, sparse_contacts, cutoff, progress_meter_freq, s
 
     ..  _`python.weave`: http://github.com/scipy/scipy/tree/master/scipy/weave/examples
     """
+    _quiet = 1 if quiet else 0  # weave does not like Python True/False and does not convert to bool
 
     c_code = """
     #include <math.h>
-
     int rows = Ncoord[0];
-
     float cutoff2 = powf(cutoff, 2.);
-
     py::tuple args(2);
-
     bool b = 1;
-
     args[1] = b;
-
     for (int i=0; i < rows; i++) {
-
         // Print progress meter
-        if (i % progress_meter_freq == 0 ) {
+        if (! _quiet && (i % progress_meter_freq == 0)) {
             printf("%.1f percent done \\n", (100.0 * i / rows));
         }
-
         for (int j=0; j < rows; j++) {
             float x = coord(i,0) - coord(j,0);
             float y = coord(i,1) - coord(j,1);
             float z = coord(i,2) - coord(j,2);
 
             float dist = powf(x, 2.) + powf(y, 2.) + powf(z, 2.);
-
             if (dist != 0.0 && dist < cutoff2) {
-
                 py::tuple idx(2);
-
                 idx[0] = i;
-
                 idx[1] = j;
-
                 args[0] = idx;
-
                 sparse_contacts.mcall("__setitem__",args);
             }
         }
     }
     """
-
-    weave.inline(c_code, ['coord', 'sparse_contacts', 'cutoff', 'progress_meter_freq', 'suppress_progmet'],
+    weave.inline(c_code, ['coord', 'sparse_contacts', 'cutoff', 'progress_meter_freq', '_quiet'],
                  type_converters=converters.blitz)
 
 
